--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<header><img src="images/logo.jpg" alt="Restaurant logo" width="150" height="150"><h1></h1></header>
+<header><img src="https://sbuller1756.github.io/IT117/images/Logo.jpg" alt="Restaurant logo" width="150" height="150"><h1></h1></header>
 <nav></nav>
 <main></main>
 <footer></footer> 
