--- a/chef.html
+++ b/chef.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<header><img src="https://sbuller1756.github.io/IT117/images/logo.jpg" alt="Restaurant logo" width="150" height="150"><h1>Meet Chef Dominic</h1></header>
+<header><img src="https://sbuller1756.github.io/IT117/images/Logo.jpg" alt="Restaurant logo" width="150" height="150"><h1>Meet Chef Dominic</h1></header>
 <nav><ul><li><a href="https://sbuller1756.github.io/IT117/index.html">Home Page</a></li> <li><a href="https://sbuller1756.github.io/IT117/aboutus.html">About Us</a></li><li><a href="https://sbuller1756.github.io/IT117/history.html">History</a></li><li><a href="https://sbuller1756.github.io/IT117/menu.html">Menu</a></li><li><a href="https://sbuller1756.github.io/IT117/contactus.html">Contact Us</a></li><li><a href="https://sbuller1756.github.io/IT117/chef.html">Chef</a></li><li><a href="https://sbuller1756.github.io/IT117/nutrition.html">Nutrition</a></li></ul></nav>
 <main><p>Chef Dominic grew up on the bayou in southern Louisiana. Early on he learned the traditions and skills from his parents. In his early 20’s he graduated from the Culinary Institute of America. Looking to expand his skills he sought an internship with Wolfgang Puck. After a successful 2 year internship he became the head chef of Restaurant Le Blue.</p><p>He won many awards during this time including top chef of America. After 12 years he left Restaurant Le Blue and came her. He has been the head chef at Spicy and Icy for the past 4 years. His skills are highlighted throughout our menu.
 </p></main>
