--- a/nutrition.html
+++ b/nutrition.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<header><img src="https://sbuller1756.github.io/IT117/images/logo.jpg" alt="Restaurant logo" width="150" height="150"><h1>Nutrition Information</h1></header>
+<header><img src="https://sbuller1756.github.io/IT117/images/Logo.jpg" alt="Restaurant logo" width="150" height="150"><h1>Nutrition Information</h1></header>
 <nav><ul><li><a href="https://sbuller1756.github.io/IT117/index.html">Home Page</a></li> <li><a href="https://sbuller1756.github.io/IT117/aboutus.html">About Us</a></li><li><a href="https://sbuller1756.github.io/IT117/history.html">History</a></li><li><a href="https://sbuller1756.github.io/IT117/menu.html">Menu</a></li><li><a href="https://sbuller1756.github.io/IT117/contactus.html">Contact Us</a></li><li><a href="https://sbuller1756.github.io/IT117/chef.html">Chef</a></li><li><a href="https://sbuller1756.github.io/IT117/nutrition.html">Nutrition</a></li></ul></nav>
 <main>
 <h2>Entree</h2>
