--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
       </tr>
 <tr><td colspan="3">*All food is available for both lunch and dinner.</td>
     </table>
-<h2>Drinks</h2><ol><li>Margarita</li><li>Hurrican</li><li>Daiquiri</li></main>
+<h2>Drinks</h2><ol><li>Margarita</li><li>Hurricane</li><li>Daiquiri</li></main>
 <footer><p><a href="https://sbuller1756.github.io/IT117/index.html">Home Page</a> | <a href="https://sbuller1756.github.io/IT117/aboutus.html">About Us</a> | <a href="https://sbuller1756.github.io/IT117/history.html">History</a> | <a href="https://sbuller1756.github.io/IT117/menu.html">Menu</a> | <a href="https://sbuller1756.github.io/IT117/contactus.html">Contact Us</a> | <a href="https://sbuller1756.github.io/IT117/chef.html">Chef</a> | <a href="https://sbuller1756.github.io/IT117/nutrition.html">Nutrition</a></p></footer> 
 
 </body>
